Revision history for Red

{{$NEXT}}
    - Create Red.ping
    - Create Red::Driver.ping

0.1.46  2021-07-21T20:01:44+01:00
    - Accept aliases on schema

0.1.45  2021-07-18T22:30:28+01:00
    - Add documentation for `is column`
    - Forbid running .^create on defined model
    - Accept enums
    - Add optimization for X && (Y && !X) => False

0.1.44  2021-05-30T20:20:04+01:00
    - Add should-drop-cascade to decide if it should use cascade to drop table

0.1.43  2021-05-02T17:39:54+01:00
    - Retrying to release

0.1.42  2021-05-02T17:05:09+01:00
    - Accept models (on referencing and on relationship) as object type
    - Regenerate docs

0.1.41  2021-04-27T00:39:46+01:00
    - Fix dynamicaly `does` and `^mixin` on models (thanks Jonathan Stowe)

0.1.40  2021-03-28T22:23:09+01:00
    - Map new UNIQUE SQLite error

0.1.39  2021-03-28T21:28:42+01:00
    - Add table-name-wrapper
    - Fix has-one create

0.1.38  2021-02-22T19:41:38Z
    - Fix multi comparators conflict

0.1.37  2021-02-22T19:08:09Z
    - Add comparison to DateTime

0.1.36  2021-02-20T23:44:52Z
    - NM relationship sample and test

0.1.35  2021-02-18T23:12:51Z
    - Remove use lib from CLI
    - add -I option to CLI
    - add --debug option to CLI

0.1.34  2021-02-18T01:53:05Z
    - Use DB's table formatter

0.1.33  2021-02-16T19:31:56Z
    - Fix refresh

0.1.32  2021-02-16T01:55:55Z
    - Fix pre-compiled experimental features
    - Fix formatter spelling

0.1.31  2021-02-14T21:04:28Z
    - Add experimental refreshable

0.1.30  2021-02-14T20:53:39Z
    - Fix column type bug
    - Add experimental update-/aggregate-supply
    - Add no-optimization use's option

0.1.29  2020-11-22T00:11:21Z
    - fix in translation
    - fix .join-model's column
    - fix fallback

0.1.28  2020-11-07T18:25:01Z
    - create experimental `has-one`

0.1.27  2020-10-31T21:28:57Z
    - Unique constraint fixes

0.1.26  2020-07-24T00:25:06+01:00
    - Add inflation to Str -> Duration