@@ -1,136 +1,134 @@
 {
-  "api": "2",
-  "auth": "Fernando Correa de Oliveira",
-  "authors": [
+  "api" : "2",
+  "auth" : "Fernando Correa de Oliveira",
+  "authors" : [
     "Fernando Correa de Oliveira"
   ],
-  "build-depends": [
-  ],
-  "depends": [
+  "build-depends" : [ ],
+  "depends" : [
     "DBIish",
     "DB::Pg",
     "UUID"
   ],
-  "description": "A Raku ORM",
-  "license": "Artistic-2.0",
-  "name": "Red",
-  "perl": "6.d",
-  "provides": {
-    "CX::Red::Bool": "lib/CX/Red/Bool.pm6",
-    "MetamodelX::Red::Comparate": "lib/MetamodelX/Red/Comparate.pm6",
-    "MetamodelX::Red::Describable": "lib/MetamodelX/Red/Describable.pm6",
-    "MetamodelX::Red::Dirtable": "lib/MetamodelX/Red/Dirtable.pm6",
-    "MetamodelX::Red::Id": "lib/MetamodelX/Red/Id.pm6",
-    "MetamodelX::Red::Migration": "lib/MetamodelX/Red/Migration.pm6",
-    "MetamodelX::Red::Model": "lib/MetamodelX/Red/Model.pm6",
-    "MetamodelX::Red::OnDB": "lib/MetamodelX/Red/OnDB.pm6",
-    "MetamodelX::Red::Populatable": "lib/MetamodelX/Red/Populatable.pm6",
-    "MetamodelX::Red::Refreshable": "lib/MetamodelX/Red/Refreshable.pm6",
-    "MetamodelX::Red::Relationship": "lib/MetamodelX/Red/Relationship.pm6",
-    "MetamodelX::Red::Supply": "lib/MetamodelX/Red/Supply.pm6",
-    "Red": "lib/Red.pm6",
-    "Red::AST": "lib/Red/AST.pm6",
-    "Red::AST::AddForeignKeyOnTable": "lib/Red/AST/AddForeignKeyOnTable.pm6",
-    "Red::AST::BeginTransaction": "lib/Red/AST/BeginTransaction.pm6",
-    "Red::AST::Case": "lib/Red/AST/Case.pm6",
-    "Red::AST::Chained": "lib/Red/AST/Chained.pm6",
-    "Red::AST::ChangeColumn": "lib/Red/AST/ChangeColumn.pm6",
-    "Red::AST::Comment": "lib/Red/AST/Comment.pm6",
-    "Red::AST::CommitTransaction": "lib/Red/AST/CommitTransaction.pm6",
-    "Red::AST::Constraints": "lib/Red/AST/Constraints.pm6",
-    "Red::AST::CreateColumn": "lib/Red/AST/CreateColumn.pm6",
-    "Red::AST::CreateTable": "lib/Red/AST/CreateTable.pm6",
-    "Red::AST::DateTimeFuncs": "lib/Red/AST/DateTimeFuncs.pm6",
-    "Red::AST::Delete": "lib/Red/AST/Delete.pm6",
-    "Red::AST::Divisable": "lib/Red/AST/Divisable.pm6",
-    "Red::AST::DropColumn": "lib/Red/AST/DropColumn.pm6",
-    "Red::AST::Empty": "lib/Red/AST/Empty.pm6",
-    "Red::AST::Function": "lib/Red/AST/Function.pm6",
-    "Red::AST::Generic::Infix": "lib/Red/AST/Generic/Infix.pm6",
-    "Red::AST::Generic::Postfix": "lib/Red/AST/Generic/Postfix.pm6",
-    "Red::AST::Generic::Prefix": "lib/Red/AST/Generic/Prefix.pm6",
-    "Red::AST::Infix": "lib/Red/AST/Infix.pm6",
-    "Red::AST::Infixes": "lib/Red/AST/Infixes.pm6",
-    "Red::AST::Insert": "lib/Red/AST/Insert.pm6",
-    "Red::AST::Intersect": "lib/Red/AST/Intersect.pm6",
-    "Red::AST::IsDefined": "lib/Red/AST/IsDefined.pm6",
-    "Red::AST::JsonItem": "lib/Red/AST/JsonItem.pm6",
-    "Red::AST::JsonRemoveItem": "lib/Red/AST/JsonRemoveItem.pm6",
-    "Red::AST::LastInsertedRow": "lib/Red/AST/LastInsertedRow.pm6",
-    "Red::AST::Minus": "lib/Red/AST/Minus.pm6",
-    "Red::AST::MultiSelect": "lib/Red/AST/MultiSelect.pm6",
-    "Red::AST::Next": "lib/Red/AST/Next.pm6",
-    "Red::AST::Operator": "lib/Red/AST/Operator.pm6",
-    "Red::AST::Optimizer::AND": "lib/Red/AST/Optimizer/AND.pm6",
-    "Red::AST::Optimizer::Case": "lib/Red/AST/Optimizer/Case.pm6",
-    "Red::AST::Optimizer::OR": "lib/Red/AST/Optimizer/OR.pm6",
-    "Red::AST::RollbackTransaction": "lib/Red/AST/RollbackTransaction.pm6",
-    "Red::AST::Select": "lib/Red/AST/Select.pm6",
-    "Red::AST::StringFuncs": "lib/Red/AST/StringFuncs.pm6",
-    "Red::AST::TableComment": "lib/Red/AST/TableComment.pm6",
-    "Red::AST::Unary": "lib/Red/AST/Unary.pm6",
-    "Red::AST::Union": "lib/Red/AST/Union.pm6",
-    "Red::AST::Update": "lib/Red/AST/Update.pm6",
-    "Red::AST::Value": "lib/Red/AST/Value.pm6",
-    "Red::Attr::Column": "lib/Red/Attr/Column.pm6",
-    "Red::Attr::Query": "lib/Red/Attr/Query.pm6",
-    "Red::Attr::Relationship": "lib/Red/Attr/Relationship.pm6",
-    "Red::Class": "lib/Red/Class.pm6",
-    "Red::Cli": "lib/Red/Cli.pm6",
-    "Red::Cli::Column": "lib/Red/Cli/Column.pm6",
-    "Red::Cli::Relationship": "lib/Red/Cli/Relationship.pm6",
-    "Red::Cli::Table": "lib/Red/Cli/Table.pm6",
-    "Red::Column": "lib/Red/Column.pm6",
-    "Red::ColumnMethods": "lib/Red/ColumnMethods.pm6",
-    "Red::DB": "lib/Red/DB.pm6",
-    "Red::Database": "lib/Red/Database.pm6",
-    "Red::DefaultResultSeq": "lib/Red/DefaultResultSeq.pm6",
-    "Red::Do": "lib/Red/Do.pm6",
-    "Red::Driver": "lib/Red/Driver.pm6",
-    "Red::Driver::Cache": "lib/Red/Driver/Cache.pm6",
-    "Red::Driver::Cache::Memory": "lib/Red/Driver/Cache/Memory.pm6",
-    "Red::Driver::CacheInvalidateOnWrite": "lib/Red/Driver/CacheInvalidateOnWrite.pm6",
-    "Red::Driver::CacheWithStrKey": "lib/Red/Driver/CacheWithStrKey.pm6",
-    "Red::Driver::CommonSQL": "lib/Red/Driver/CommonSQL.pm6",
-    "Red::Driver::Mock": "lib/Red/Driver/Mock.pm6",
-    "Red::Driver::Pg": "lib/Red/Driver/Pg.pm6",
-    "Red::Driver::SQLite": "lib/Red/Driver/SQLite.pm6",
-    "Red::Driver::SQLite::SQLiteMaster": "lib/Red/Driver/SQLite/SQLiteMaster.pm6",
-    "Red::Driver::SQLite::SchemaReader": "lib/Red/Driver/SQLite/SchemaReader.pm6",
-    "Red::Event": "lib/Red/Event.pm6",
-    "Red::Formatter": "lib/Red/Formatter.pm6",
-    "Red::FromRelationship": "lib/Red/FromRelationship.pm6",
-    "Red::HiddenFromSQLCommenting": "lib/Red/HiddenFromSQLCommenting.pm6",
-    "Red::Migration::Column": "lib/Red/Migration/Column.pm6",
-    "Red::Migration::Migration": "lib/Red/Migration/Migration.pm6",
-    "Red::Migration::Table": "lib/Red/Migration/Table.pm6",
-    "Red::Model": "lib/Red/Model.pm6",
-    "Red::Operators": "lib/Red/Operators.pm6",
-    "Red::Phaser": "lib/Red/Phaser.pm6",
-    "Red::PrepareCode": "lib/Red/PrepareCode.pm6",
-    "Red::ResultAssociative": "lib/Red/ResultAssociative.pm6",
-    "Red::ResultSeq": "lib/Red/ResultSeq.pm6",
-    "Red::ResultSeq::Iterator": "lib/Red/ResultSeq/Iterator.pm6",
-    "Red::ResultSeqSeq": "lib/Red/ResultSeqSeq.pm6",
-    "Red::Schema": "lib/Red/Schema.pm6",
-    "Red::SchemaReader": "lib/Red/SchemaReader.pm6",
-    "Red::Statement": "lib/Red/Statement.pm6",
-    "Red::Traits": "lib/Red/Traits.pm6",
-    "Red::Type::Json": "lib/Red/Type/Json.pm6",
-    "Red::Utils": "lib/Red/Utils.pm6",
-    "X::Red::Exceptions": "lib/X/Red/Exceptions.pm6"
+  "description" : "A Raku ORM",
+  "license" : "Artistic-2.0",
+  "name" : "Red",
+  "perl" : "6.d",
+  "provides" : {
+    "CX::Red::Bool" : "lib/CX/Red/Bool.pm6",
+    "MetamodelX::Red::Comparate" : "lib/MetamodelX/Red/Comparate.pm6",
+    "MetamodelX::Red::Describable" : "lib/MetamodelX/Red/Describable.pm6",
+    "MetamodelX::Red::Dirtable" : "lib/MetamodelX/Red/Dirtable.pm6",
+    "MetamodelX::Red::Id" : "lib/MetamodelX/Red/Id.pm6",
+    "MetamodelX::Red::Migration" : "lib/MetamodelX/Red/Migration.pm6",
+    "MetamodelX::Red::Model" : "lib/MetamodelX/Red/Model.pm6",
+    "MetamodelX::Red::OnDB" : "lib/MetamodelX/Red/OnDB.pm6",
+    "MetamodelX::Red::Populatable" : "lib/MetamodelX/Red/Populatable.pm6",
+    "MetamodelX::Red::Refreshable" : "lib/MetamodelX/Red/Refreshable.pm6",
+    "MetamodelX::Red::Relationship" : "lib/MetamodelX/Red/Relationship.pm6",
+    "MetamodelX::Red::Supply" : "lib/MetamodelX/Red/Supply.pm6",
+    "Red" : "lib/Red.pm6",
+    "Red::AST" : "lib/Red/AST.pm6",
+    "Red::AST::AddForeignKeyOnTable" : "lib/Red/AST/AddForeignKeyOnTable.pm6",
+    "Red::AST::BeginTransaction" : "lib/Red/AST/BeginTransaction.pm6",
+    "Red::AST::Case" : "lib/Red/AST/Case.pm6",
+    "Red::AST::Chained" : "lib/Red/AST/Chained.pm6",
+    "Red::AST::ChangeColumn" : "lib/Red/AST/ChangeColumn.pm6",
+    "Red::AST::Comment" : "lib/Red/AST/Comment.pm6",
+    "Red::AST::CommitTransaction" : "lib/Red/AST/CommitTransaction.pm6",
+    "Red::AST::Constraints" : "lib/Red/AST/Constraints.pm6",
+    "Red::AST::CreateColumn" : "lib/Red/AST/CreateColumn.pm6",
+    "Red::AST::CreateTable" : "lib/Red/AST/CreateTable.pm6",
+    "Red::AST::DateTimeFuncs" : "lib/Red/AST/DateTimeFuncs.pm6",
+    "Red::AST::Delete" : "lib/Red/AST/Delete.pm6",
+    "Red::AST::Divisable" : "lib/Red/AST/Divisable.pm6",
+    "Red::AST::DropColumn" : "lib/Red/AST/DropColumn.pm6",
+    "Red::AST::Empty" : "lib/Red/AST/Empty.pm6",
+    "Red::AST::Function" : "lib/Red/AST/Function.pm6",
+    "Red::AST::Generic::Infix" : "lib/Red/AST/Generic/Infix.pm6",
+    "Red::AST::Generic::Postfix" : "lib/Red/AST/Generic/Postfix.pm6",
+    "Red::AST::Generic::Prefix" : "lib/Red/AST/Generic/Prefix.pm6",
+    "Red::AST::Infix" : "lib/Red/AST/Infix.pm6",
+    "Red::AST::Infixes" : "lib/Red/AST/Infixes.pm6",
+    "Red::AST::Insert" : "lib/Red/AST/Insert.pm6",
+    "Red::AST::Intersect" : "lib/Red/AST/Intersect.pm6",
+    "Red::AST::IsDefined" : "lib/Red/AST/IsDefined.pm6",
+    "Red::AST::JsonItem" : "lib/Red/AST/JsonItem.pm6",
+    "Red::AST::JsonRemoveItem" : "lib/Red/AST/JsonRemoveItem.pm6",
+    "Red::AST::LastInsertedRow" : "lib/Red/AST/LastInsertedRow.pm6",
+    "Red::AST::Minus" : "lib/Red/AST/Minus.pm6",
+    "Red::AST::MultiSelect" : "lib/Red/AST/MultiSelect.pm6",
+    "Red::AST::Next" : "lib/Red/AST/Next.pm6",
+    "Red::AST::Operator" : "lib/Red/AST/Operator.pm6",
+    "Red::AST::Optimizer::AND" : "lib/Red/AST/Optimizer/AND.pm6",
+    "Red::AST::Optimizer::Case" : "lib/Red/AST/Optimizer/Case.pm6",
+    "Red::AST::Optimizer::OR" : "lib/Red/AST/Optimizer/OR.pm6",
+    "Red::AST::RollbackTransaction" : "lib/Red/AST/RollbackTransaction.pm6",
+    "Red::AST::Select" : "lib/Red/AST/Select.pm6",
+    "Red::AST::StringFuncs" : "lib/Red/AST/StringFuncs.pm6",
+    "Red::AST::TableComment" : "lib/Red/AST/TableComment.pm6",
+    "Red::AST::Unary" : "lib/Red/AST/Unary.pm6",
+    "Red::AST::Union" : "lib/Red/AST/Union.pm6",
+    "Red::AST::Update" : "lib/Red/AST/Update.pm6",
+    "Red::AST::Value" : "lib/Red/AST/Value.pm6",
+    "Red::Attr::Column" : "lib/Red/Attr/Column.pm6",
+    "Red::Attr::Query" : "lib/Red/Attr/Query.pm6",
+    "Red::Attr::Relationship" : "lib/Red/Attr/Relationship.pm6",
+    "Red::Class" : "lib/Red/Class.pm6",
+    "Red::Cli" : "lib/Red/Cli.pm6",
+    "Red::Cli::Column" : "lib/Red/Cli/Column.pm6",
+    "Red::Cli::Relationship" : "lib/Red/Cli/Relationship.pm6",
+    "Red::Cli::Table" : "lib/Red/Cli/Table.pm6",
+    "Red::Column" : "lib/Red/Column.pm6",
+    "Red::ColumnMethods" : "lib/Red/ColumnMethods.pm6",
+    "Red::DB" : "lib/Red/DB.pm6",
+    "Red::Database" : "lib/Red/Database.pm6",
+    "Red::DefaultResultSeq" : "lib/Red/DefaultResultSeq.pm6",
+    "Red::Do" : "lib/Red/Do.pm6",
+    "Red::Driver" : "lib/Red/Driver.pm6",
+    "Red::Driver::Cache" : "lib/Red/Driver/Cache.pm6",
+    "Red::Driver::Cache::Memory" : "lib/Red/Driver/Cache/Memory.pm6",
+    "Red::Driver::CacheInvalidateOnWrite" : "lib/Red/Driver/CacheInvalidateOnWrite.pm6",
+    "Red::Driver::CacheWithStrKey" : "lib/Red/Driver/CacheWithStrKey.pm6",
+    "Red::Driver::CommonSQL" : "lib/Red/Driver/CommonSQL.pm6",
+    "Red::Driver::Mock" : "lib/Red/Driver/Mock.pm6",
+    "Red::Driver::Pg" : "lib/Red/Driver/Pg.pm6",
+    "Red::Driver::SQLite" : "lib/Red/Driver/SQLite.pm6",
+    "Red::Driver::SQLite::SQLiteMaster" : "lib/Red/Driver/SQLite/SQLiteMaster.pm6",
+    "Red::Driver::SQLite::SchemaReader" : "lib/Red/Driver/SQLite/SchemaReader.pm6",
+    "Red::Event" : "lib/Red/Event.pm6",
+    "Red::Formatter" : "lib/Red/Formatter.pm6",
+    "Red::FromRelationship" : "lib/Red/FromRelationship.pm6",
+    "Red::HiddenFromSQLCommenting" : "lib/Red/HiddenFromSQLCommenting.pm6",
+    "Red::Migration::Column" : "lib/Red/Migration/Column.pm6",
+    "Red::Migration::Migration" : "lib/Red/Migration/Migration.pm6",
+    "Red::Migration::Table" : "lib/Red/Migration/Table.pm6",
+    "Red::Model" : "lib/Red/Model.pm6",
+    "Red::Operators" : "lib/Red/Operators.pm6",
+    "Red::Phaser" : "lib/Red/Phaser.pm6",
+    "Red::PrepareCode" : "lib/Red/PrepareCode.pm6",
+    "Red::ResultAssociative" : "lib/Red/ResultAssociative.pm6",
+    "Red::ResultSeq" : "lib/Red/ResultSeq.pm6",
+    "Red::ResultSeq::Iterator" : "lib/Red/ResultSeq/Iterator.pm6",
+    "Red::ResultSeqSeq" : "lib/Red/ResultSeqSeq.pm6",
+    "Red::Schema" : "lib/Red/Schema.pm6",
+    "Red::SchemaReader" : "lib/Red/SchemaReader.pm6",
+    "Red::Statement" : "lib/Red/Statement.pm6",
+    "Red::Traits" : "lib/Red/Traits.pm6",
+    "Red::Type::Json" : "lib/Red/Type/Json.pm6",
+    "Red::Utils" : "lib/Red/Utils.pm6",
+    "X::Red::Exceptions" : "lib/X/Red/Exceptions.pm6"
   },
-  "resources": [
-  ],
-  "source-url": "https://github.com/FCO/Red.git",
-  "tags": [
+  "resources" : [ ],
+  "source-url" : "https://github.com/FCO/Red.git",
+  "tags" : [
     "ORM",
     "database",
     "map",
     "relational"
   ],
-  "test-depends": [
+  "test-depends" : [
     "Test::META"
   ],
-  "version": "0.1.46"
+  "version" : "0.1.46"
 }
